[FIND-1158] Fix slider backgrounds
Focusing on the slider would create a background which overflowed the track.
Set the background on the whole slider to transparent to prevent this (this also
overrides a default white background, which was hard to see in our colour scheme.

[rev: wojciech,kaluza]

--- a/webapp/core/src/main/less/app-include.less
+++ b/webapp/core/src/main/less/app-include.less
@@ -1220,6 +1220,7 @@ input[type=range].speed-slider {
   padding: 0;
   cursor: pointer;
   display: inline;
+  background: transparent;
   // added for Firefox alignment issues
   vertical-align: middle;
 
@@ -1264,9 +1265,11 @@ input[type=range].speed-slider {
 
   &:focus {
     outline: none;
-    background: @hpeTrackBackgroundFocus;
   }
   &:focus::-webkit-slider-runnable-track {
+    background: @hpeTrackBackgroundFocus;
+  }
+  &:focus::-moz-range-track {
     background: @hpeTrackBackgroundFocus;
   }
   &:focus::-ms-fill-lower {
